Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 ---
 title: Shine Metal Polishers
+meta_title:
+description:
+images:
+  - image_path:
+    title:
 ---
 
 <section class="layer-1">
