Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 ---
 title: Shine Metal Polishers
-meta_title:
-description:
+meta_title: 'Polishing - Automotive, Marine, industrial, Homeware & Collectables'
+description: >-
+  At Shine Metal Polishers we are proud to give you the highest quality finish
+  to your car, hot-rod, motorbike and household treasures.
 images:
   - image_path:
     title:
@@ -140,3 +142,4 @@ images:
     </div>
     
 </section> 
+-->
