Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,25 @@ description: >-
   At Shine Metal Polishers we are proud to give you the highest quality finish
   to your car, hot-rod, motorbike and household treasures.
 images:
-  - image_path:
+  - image_path: /uploads/blue-car-engine.jpg
+    title:
+  - image_path: /uploads/antelope.jpg
+    title:
+  - image_path: /uploads/bike-chrome.jpg
+    title:
+  - image_path: /uploads/birds.jpg
+    title:
+  - image_path: /uploads/cannon.jpg
+    title:
+  - image_path: /uploads/engine-2.jpg
+    title:
+  - image_path: /uploads/horses-work.jpg
+    title:
+  - image_path: /uploads/horses.jpg
+    title:
+  - image_path: /uploads/kitchen-sink.jpg
+    title:
+  - image_path: /uploads/lion.jpg
     title:
 ---
 
