--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ title: Shine Metal Polishers
 meta_title: 'Polishing - Automotive, Marine, industrial, Homeware & Collectables'
 description: >-
   At Shine Metal Polishers we are proud to give you the highest quality finish
-  to your car, hot-rod, motorbike and household treasures.
+  to your car, hot rod, motorbike and household treasures.
 images:
   - image_path: /uploads/blue-car-engine.jpg
     title:
