Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ images:
                 <h3>Our mission statement:</h3><p>To do our utmost to ensure that you are happy with our service. We will not undertake work that we cannot complete to your satisfaction. Ensure that you are happy with the advice given.</p><p><strong>Mike &amp; Gloria Sandbrook owner operators.</strong></p>
             </div>
             
-            <div class="editable">
+            <div class="editable mission-statement">
                 <blockquote><p>I started Metal Polishing at the age of 18 at Otahuhu Chrome Platers learning all the aspects of this field. I am really thankful for the tuition I gained from Bob and Glennis Pearson whom I worked for a period of 20 years as an employee and as a self-employed contractor. We specialised predominantly in the automotive restoration work but also engaged in a variety of other work also. This training gave me invaluable tools to be able to assess jobs in a professional way giving the customer advice on a wide range of scenarios.</p><p>I have a passion for the Motor Sport Industry and follow a variety of racing. I love motorbikes and ride my own MotorX bike when time is available.</p><p><strong>Mike Sandbrook</strong></p></blockquote>
             </div>
                
