Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@ images:
     title:
   - image_path: /uploads/lion.jpg
     title:
+  - image_path: /uploads/green-hot-rod-1.jpg
+    title:
 ---
 
 <section class="layer-1">
