Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@ description: >-
   At Shine Metal Polishers we are proud to give you the highest quality finish
   to your car, hot rod, motorbike and household treasures.
 images:
+  - image_path: /uploads/green-hot-rod-1.jpg
+    title:
+  - image_path: /uploads/green-hot-rod-2.jpg
+    title:
+  - image_path: /uploads/green-hot-rod-3.jpg
+    title:
   - image_path: /uploads/blue-car-engine.jpg
     title:
   - image_path: /uploads/antelope.jpg
