Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ images:
             <div class="editable"><h1>Shine Metal Polishers</h1><h4>Mike Sandbrook Metal Polisher</h4><p>We are proud to give the highest quality finish to your car, hot rod, motorbike and household treasures.</p><p>We genuinely care about your requirements and offer a friendly, welcoming environment. We value your property and work hard to give you the finish you expect. Our work will make you proud to display your vehicle or any other product that needs a bright finish.</p></div>
             
             <div class="cell" style="padding-top: 30px;">
-              <p class="text-center"><a href="https://www.facebook.com/hotrod23t/"><i class="fa fa-facebook" style="color: #3b5998;" aria-hidden="true"></i></a></p>
+              <p class="text-center"><a href="https://www.facebook.com/hotrod23t/"><i class="fa fa-facebook-square" style="color: #3b5998;" aria-hidden="true"></i></a></p>
             </div>
                
         </div>
